--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
       <!-- Custom CSS -->
-      <link href="css/stylish-portfolio.min.css" rel="stylesheet">
+      <link href="css/stylish-portfolio.css" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
